--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ main {
   color: white;
   font-weight: 400;
   font-size: 5vw;
-  background-color: lightslategray;
+  background-color: rgb(132, 153, 173);
   padding: 0;
   margin: 0;
 }
